Fixed grid-gap issue

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,10 @@ h5 {
 .green {
   background-color: green;
 }
+#website-container {
+  width: 90%;
+  margin: auto;
+}
 /* ------------------------------Global END------------------------------ */
 
 /* ------------------------------Navigation CSS start------------------------------ */
@@ -215,17 +219,18 @@ html {
 /*main konteineris*/
 .container-test-block {
   display: grid;
-  grid-template: repeat(1, 300px) / repeat(1, 100%);
-  row-gap: 1%;
+  grid-template-columns: repeat(1, 1fr);
   grid-auto-flow: row;
   justify-content: center;
+  gap: 10px;
+  overflow: hidden;
 }
 
 @media (min-width: 576px) {
   .container-test-block {
     display: grid;
-    grid-template: repeat(1, 300px) / repeat(2, 48%);
-    gap: 2%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
     width: 100%;
     grid-auto-flow: row;
   }
@@ -234,8 +239,8 @@ html {
 @media (min-width: 992px) {
   .container-test-block {
     display: grid;
-    grid-template: repeat(1, 300px) / repeat(3, 32%);
-    gap: 2%;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
     width: 100%;
     grid-auto-flow: row;
   }
@@ -244,9 +249,10 @@ html {
 @media (min-width: 1200px) {
   .container-test-block {
     display: grid;
-    grid-template: repeat(1, 300px) / repeat(4, 23%);
-    gap: 2%;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
     width: 100%;
+    height: 100%;
     grid-auto-flow: row;
   }
 }
